报障主页 数据库设计

--- a/report_fault_system/static/css/include.css
+++ b/report_fault_system/static/css/include.css
@@ -94,7 +94,7 @@ img {
 .pg-body .contents {
     position: absolute;
     top: 48px;
-    bottom: 0;
+    bottom: 100px;
     left: 201px;
     right: 0;
     background-color: white;
