--- a/report_fault_system/template/report_fault/home.html
+++ b/report_fault_system/template/report_fault/home.html
@@ -5,11 +5,8 @@
 {% endblock %}
 
 {% block css %}
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
     <style>
-        .pg-body .menus .menus-items {
-            text-align: center;
-        }
-
         .menus-set {
             position: relative;
             left: 30px;
@@ -18,6 +15,14 @@
 
         .menus-set a {
             display: block;
+        }
+
+        .create-trouble{
+            float: right;
+            margin: 2px;
+            background-color: red;
+            font-size: 20px;
+            height: 40px;
         }
     </style>
 
@@ -59,6 +64,45 @@
 {% endblock %}
 
 {% block contents %}
+    <div class="create-trouble btn btn-primary dropdown-toggle">
+        <a href="{% url 'get_trouble' %}">创建报障单</a>
+    </div>
+    <table class="table table-bordered">
+        <tr>
+            <th>标题</th>
+            <th>报障人</th>
+            <th>报障时间</th>
+            <th>详情</th>
+            <th>处理状态</th>
+            <th>处理人</th>
+            <th>处理时间</th>
+            <th>处理方案</th>
+            <th>评价</th>
+            <th>操作</th>
+        </tr>
+        {% for trouble in troubles %}
+            <tr>
+                <th>{{ trouble.title }}</th>
+                <th>{{ trouble.user }}</th>
+                <th>{{ trouble.ctime }}</th>
+                <th>{{ trouble.detail }}</th>
+                <th>{{ trouble.get_status_display }}</th>
+                <th>{{ trouble.processor }}</th>
+                <th>{{ trouble.ptime }}</th>
+                <th>{{ trouble.solution }}</th>
+                <th>{{ trouble.evaluation }}</th>
+                <th>
+                    <a href="{% url 'del_trouble' trouble_id=trouble.id %}">
+                        删除
+                    </a>
+                    |
+                    <a href="{% url 'set_trouble' trouble_id=trouble.id %}">
+                        编辑
+                    </a>
+                </th>
+            </tr>
+        {% endfor %}
+    </table>
 
 {% endblock %}
 
@@ -70,7 +114,7 @@
                 console.log(display);
                 $('.menus-set').css('display', 'none');
 
-                if (display=='none'){
+                if (display == 'none') {
                     $(this).children('.menus-set').css('display', 'block');
                 }
             }
